rt.ass.tf
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.jenkins.id
  route_table_id = aws_route_table.public_rt.id
}
